--- a/expiry/index.html
+++ b/expiry/index.html
@@ -14,6 +14,8 @@
 	</style>
 	<link type="text/css" rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.6/css/all.css">
 	<link type="text/css" rel="stylesheet" href="/default.css">
+	<link type="text/css" rel="stylesheet" href="/expiry/style.css">
+	
 	<style>
 		#navi,
 		#navi2 {
@@ -118,8 +120,7 @@ try {
 
 $.get("https://fxtools.github.io/expiry/" + dt.year + "/" + dt.toISODate(), function(data) {
 	var xml = $(data);
-	w("xml", xml);
-	
+	document.title = xml.find("title").text();
 	$("#expiry").append(xml.find("ccypairs"));
 });
 
