--- a/expiry/index.html
+++ b/expiry/index.html
@@ -84,6 +84,8 @@
 				</li>
 			</ul>
 		</header>
+		
+		<h2></h2>
 
 		<section id="expiry">
 		</section>
@@ -121,7 +123,17 @@ try {
 $.get("https://fxtools.github.io/expiry/" + dt.year + "/" + dt.toISODate(), function(data) {
 	var xml = $(data);
 	document.title = xml.find("title").text();
+	$("h2").text(document.title);
 	$("#expiry").append(xml.find("ccypairs"));
+	
+	var dtPrev = dt.plus({ days: -1 });
+	var dtPrev = dt.plus({ days: +1 });
+	
+	var uriPrev = "https://fxtools.github.io/expiry/" + dtPrev.year + "/" + dtPrev.toISODate();
+	var uriNext = "https://fxtools.github.io/expiry/" + dtNext.year + "/" + dtNext.toISODate();
+	
+	$("#prev").attr("href", uriPrev);
+	$("#next").attr("href", uriNext);
 });
 
 </script>
